<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/name_text"
        style="@style/TutorStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/edit_nick_name"
        style="@style/TutorStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:hint="@string/whats_your_nickname"
        android:inputType="textPersonName|text"
        android:paddingBottom="@dimen/small_padding"
        android:textAlignment="center"
        android:textColorHint="#FFFFFF"
        android:focusable="auto"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@android:color/holo_green_light"
        android:fontFamily="@font/audiowide"
        android:text="@string/done" />

    <TextView
        android:id="@+id/nickname_text"
        style="@style/TutorStyle"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:background="@android:color/holo_blue_light"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/star_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin"
        android:contentDescription="@string/yellow_star"
        app:srcCompat="@android:drawable/btn_star_big_on"
        tools:ignore="ImageContrastCheck" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bio_text"
                style="@style/TutorStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bio" />

            <ImageView
                android:id="@+id/scroll_img"
                style="@style/NameStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>